--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>نظام OMA - إدارة الطلاب مع الدروس</title>
+<title>نظام OMA - إدارة الطلاب (متطور)</title>
 <style>
 :root{
   --primary:#004aad;
@@ -11,192 +11,203 @@
   --bg:#f5f9ff;
   --card:#fff;
 }
-body{font-family:'Cairo',sans-serif;margin:0;background:var(--bg);color:#102027;direction:rtl;}
-header{background:linear-gradient(90deg,var(--primary),#007bff);color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
+*{box-sizing:border-box}
+body{
+  font-family: 'Cairo',sans-serif;
+  margin:0;background:linear-gradient(180deg,var(--bg),#fff);
+  color:#102027;direction:rtl;
+}
+header{
+  background:linear-gradient(90deg,var(--primary),#007bff);
+  color:#fff;padding:18px 16px;text-align:center;font-size:20px;font-weight:700;
+  box-shadow:0 3px 12px rgba(2,20,40,0.08);
+}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-.form-grid{display:flex;flex-wrap:wrap;gap:10px;}
-input[type="text"], input[type="tel"], input[type="number"], select, textarea {padding:8px;border:1px solid #d6dde9;border-radius:8px;width:100%;}
-.two{width:calc(50% - 6px);}
-.three{width:calc(33.333% - 8px);}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12);}
-.subjects-row{display:flex;gap:6px;margin-bottom:6px;align-items:center;}
-.subjects-row input, .subjects-row select{flex:1;}
-.removeSubjBtn{background:#ff7043;color:#fff;border:none;padding:4px 6px;border-radius:4px;cursor:pointer;}
+.controls{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:14px;align-items:center;}
+.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);flex:1}
+.form-grid{display:flex;flex-wrap:wrap;gap:10px}
+input[type="text"], input[type="tel"], input[type="number"], select, textarea, .subject-field,.time-field {
+  padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;
+}
+.two{width:calc(50% - 6px)}
+.three{width:calc(33.333% - 8px)}
+label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
+.btn.warn{background:#ff7043}
+.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
+.btn.small{padding:6px 8px;font-size:13px;border-radius:6px}
+.add-subj{display:inline-block;margin-top:6px}
+table{width:100%;border-collapse:collapse;margin-top:12px}
+th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
+th{background:var(--primary);color:#fff}
+.actions button{margin:0 6px}
+.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
+.filters{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
+.right{display:flex;gap:8px;align-items:center}
+.checkbox{width:18px;height:18px}
+/* responsive */
+@media (max-width:900px){
+  .two,.three{width:100%}
+  .controls{flex-direction:column;align-items:stretch}
+}
+/* print styles A4 */
+@media print{
+  body{background:white;padding:0}
+  header, .controls, .card .form-grid, .filters, .actions, .modal, .logo-preview { display:none !important; }
+  .print-page{box-shadow:none;margin:0;padding:0}
+}
+/* modal */
+.modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
+.modal.open{display:flex}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
+.flex{display:flex;gap:8px;align-items:center}
+.logo-preview{height:60px;object-fit:contain}
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الطلاب والدروس</header>
+<header>نظام OMA - إدارة الطلاب (النسخة المتقدمة)</header>
 <div class="wrap">
 
-  <div class="card">
-    <h3>إضافة طالب جديد</h3>
-    <form id="studentForm">
+<!-- لوحة التحكم وإضافة طالب -->
+<div class="controls">
+  <div style="flex:1" class="card">
+    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
+      <div>
+        <strong>أضف طالب جديد</strong>
+        <div style="font-size:13px;color:#546e7a">املأ الحقول ثم اضغط حفظ</div>
+      </div>
+      <div class="right">
+        <button id="openLogoBtn" class="btn ghost">رفع شعار المعهد</button>
+        <input id="searchInput" placeholder="بحث بالاسم أو الهاتف..." style="padding:8px;border-radius:8px;border:1px solid #e0e6ef" />
+        <button id="refreshBtn" class="btn">تحديث</button>
+      </div>
+    </div>
+
+    <form id="studentForm" style="margin-top:12px">
       <div class="form-grid">
-        <div class="two">
-          <label>الاسم الكامل</label>
-          <input id="name" type="text" required />
-        </div>
-        <div class="two">
-          <label>رقم الموبايل</label>
-          <input id="phone" type="tel" required />
-        </div>
-        <div class="two">
-          <label>المرحلة الدراسية</label>
-          <input id="stage" type="text" />
-        </div>
-        <div class="two">
-          <label>المجموعة / الكروب</label>
-          <input id="group" type="text" />
-        </div>
+        <div class="two"><label>الاسم الكامل</label><input id="name" type="text" required /></div>
+        <div class="two"><label>رقم الموبايل</label><input id="phone" type="tel" required /></div>
+        <div class="two"><label>العنوان</label><input id="address" type="text" /></div>
+        <div class="two"><label>اسم المدرسة</label><input id="school" type="text" /></div>
+        <div class="two"><label>المرحلة الدراسية</label><input id="stage" type="text" /></div>
+        <div class="two"><label>المجموعة / الكروب</label><input id="group" type="text" placeholder="مثال: A أو 101" /></div>
+
+        <!-- المواد مع الأستاذ والرسوم -->
         <div style="width:100%">
-          <label>المواد والدروس</label>
-          <div id="subjectsContainer"></div>
-          <button type="button" id="addSubjectBtn" class="btn ghost" style="margin-top:6px;">➕ إضافة مادة</button>
+          <label>المواد (أضف أكثر من مادة)</label>
+          <div id="subjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
+          <div style="margin-top:8px">
+            <button id="addSubjectBtn" type="button" class="btn ghost small add-subj">➕ إضافة مادة</button>
+          </div>
         </div>
-        <div style="width:100%;display:flex;justify-content:flex-end;margin-top:12px">
-          <button type="submit" class="btn">✅ حفظ الطالب</button>
+
+        <div class="two"><label>إجمالي الأقساط (اختياري)</label><input id="totalFees" type="number" min="0" /></div>
+        <div class="two"><label>ملاحظات الطالب</label><input id="note" type="text" /></div>
+
+        <div style="width:100%;display:flex;gap:8px;justify-content:flex-end">
+          <button id="saveStudentBtn" class="btn" type="submit">✅ حفظ الطالب</button>
+          <button id="clearFormBtn" type="button" class="btn ghost">مسح الحقول</button>
         </div>
       </div>
     </form>
   </div>
 
-  <div class="card" style="margin-top:20px;">
-    <h3>قائمة الطلاب</h3>
-    <table border="1" width="100%" id="studentsTable">
-      <thead>
-        <tr>
-          <th>الاسم</th>
-          <th>الهاتف</th>
-          <th>المرحلة</th>
-          <th>المجموعة</th>
-          <th>المواد</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+  <div style="min-width:320px" class="card">
+    <div style="display:flex;justify-content:space-between;align-items:center;">
+      <div>
+        <strong>طباعة / فلترة القائمة</strong>
+        <div style="font-size:13px;color:#546e7a">حدد شروط الطباعة أو اختَر طباعة مفصلة لطالب</div>
+      </div>
+      <div style="display:flex;gap:8px;align-items:center">
+        <select id="filterStage" style="padding:8px;border-radius:8px;border:1px solid #e0e6ef">
+          <option value="">كل المراحل</option>
+        </select>
+        <select id="filterGroup" style="padding:8px;border-radius:8px;border:1px solid #e0e6ef">
+          <option value="">كل المجموعات</option>
+        </select>
+        <button id="printFilteredBtn" class="btn">🖨️ طباعة القائمة</button>
+      </div>
+    </div>
   </div>
-
 </div>
 
+<!-- جدول الطلاب -->
+<div class="card">
+  <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+    <div><strong>قائمة الطلاب</strong> <span id="totalCount" class="badge">0</span></div>
+  </div>
+  <table id="studentsTable">
+    <thead>
+      <tr>
+        <th>الاسم</th>
+        <th>الهاتف</th>
+        <th>المرحلة</th>
+        <th>المجموعة</th>
+        <th>المواد</th>
+        <th>المبلغ المدفوع / المتبقي</th>
+        <th>الخيارات</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+<!-- Modal: student detail -->
+<div id="modal" class="modal" aria-hidden="true">
+  <div class="box">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+      <strong id="modalTitle">تفاصيل الطالب</strong>
+      <button id="closeModal" class="btn ghost">إغلاق</button>
+    </div>
+    <div id="modalBody"></div>
+  </div>
+</div>
+
+<!-- Modal: Upload logo -->
+<div id="logoModal" class="modal" aria-hidden="true">
+  <div class="box">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+      <strong>رفع شعار المعهد</strong>
+      <button id="closeLogoModal" class="btn ghost">إغلاق</button>
+    </div>
+    <div>
+      <input id="logoInput" type="file" accept="image/*" />
+      <div style="margin-top:12px">
+        <img id="logoPreview" class="logo-preview" src="" alt="logo preview" />
+      </div>
+      <div style="margin-top:12px">
+        <button id="uploadLogoBtn" class="btn">رفع وحفظ الشعار</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Firebase -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc, getDoc, setDoc, query, orderBy } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-storage.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
-  authDomain: "YOUR_AUTH_DOMAIN",
-  projectId: "YOUR_PROJECT_ID",
-  storageBucket: "YOUR_BUCKET",
-  messagingSenderId: "YOUR_SENDER_ID",
-  appId: "YOUR_APP_ID"
+  apiKey: "AIzaSyAEMoMQDiLffCCJWybFJFQ-b9iHajimme0",
+  authDomain: "oma-system-30813.firebaseapp.com",
+  projectId: "oma-system-30813",
+  storageBucket: "oma-system-30813.firebasestorage.app",
+  messagingSenderId: "905224657062",
+  appId: "1:905224657062:web:584b3e72e4cc2c58ea3c67",
+  measurementId: "G-645066LLLP"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-
-// قائمة الأساتذة مؤقتًا (يمكن جلبها من Firebase)
-let teachersCache = [
-  {id:'t1', name:'أستاذ أحمد'}, {id:'t2', name:'أستاذة سارة'}
-];
+const storage = getStorage(app);
+const auth = getAuth(app);
 
 const subjectsContainer = document.getElementById('subjectsContainer');
 const addSubjectBtn = document.getElementById('addSubjectBtn');
-const studentForm = document.getElementById('studentForm');
+const form = document.getElementById('studentForm');
 const tableBody = document.querySelector('#studentsTable tbody');
-
-function addSubjectField(){
-  const div = document.createElement('div');
-  div.className='subjects-row';
-  div.innerHTML=`
-    <input type="text" class="subjectName" placeholder="اسم المادة" required/>
-    <select class="subjectTeacher" required>
-      <option value="">اختر الأستاذ</option>
-      ${teachersCache.map(t=>`<option value="${t.id}">${t.name}</option>`).join('')}
-    </select>
-    <input type="text" class="subjectRoom" placeholder="القاعة" required/>
-    <input type="date" class="subjectDay" required/>
-    <input type="time" class="subjectStart" required/>
-    <input type="time" class="subjectEnd" required/>
-    <button type="button" class="removeSubjBtn">❌</button>
-  `;
-  const removeBtn = div.querySelector('.removeSubjBtn');
-  removeBtn.addEventListener('click', ()=> div.remove());
-  subjectsContainer.appendChild(div);
-}
-
-addSubjectBtn.addEventListener('click', addSubjectField);
-addSubjectField(); // إضافة أول صف تلقائياً
-
-function timeOverlap(s1,e1,s2,e2){return (s1<e2)&&(s2<e1);}
-
-async function checkSmartConflicts(newSubjects){
-  const conflicts=[];
-  const snapshot = await getDocs(collection(db,'students'));
-  snapshot.forEach(docSnap=>{
-    const student = docSnap.data();
-    (student.subjects||[]).forEach(existing=>{
-      newSubjects.forEach(ns=>{
-        if(existing.day===ns.day){
-          if(existing.teacherId===ns.teacherId && timeOverlap(existing.start,existing.end,ns.start,ns.end)){
-            const t = teachersCache.find(t=>t.id===ns.teacherId);
-            conflicts.push(`تعارض مع الأستاذ ${t? t.name:'-'} في ${existing.name} يوم ${existing.day} من ${existing.start} إلى ${existing.end}`);
-          }
-          if(existing.room===ns.room && timeOverlap(existing.start,existing.end,ns.start,ns.end)){
-            conflicts.push(`القاعة ${ns.room} محجوزة في مادة ${existing.name} يوم ${existing.day}`);
-          }
-        }
-      });
-    });
-  });
-  return conflicts;
-}
-
-studentForm.addEventListener('submit', async e=>{
-  e.preventDefault();
-  const name = document.getElementById('name').value.trim();
-  const phone = document.getElementById('phone').value.trim();
-  const stage = document.getElementById('stage').value.trim();
-  const group = document.getElementById('group').value.trim();
-
-  const subjects = Array.from(subjectsContainer.querySelectorAll('.subjects-row')).map(r=>({
-    name: r.querySelector('.subjectName').value,
-    teacherId: r.querySelector('.subjectTeacher').value,
-    room: r.querySelector('.subjectRoom').value,
-    day: r.querySelector('.subjectDay').value,
-    start: r.querySelector('.subjectStart').value,
-    end: r.querySelector('.subjectEnd').value
-  }));
-
-  const conflicts = await checkSmartConflicts(subjects);
-  if(conflicts.length){ alert("يوجد تعارضات:\n"+conflicts.join('\n')); return; }
-
-  await addDoc(collection(db,'students'),{name,phone,stage,group,subjects});
-  alert('تم حفظ الطالب بنجاح');
-  studentForm.reset(); subjectsContainer.innerHTML=''; addSubjectField();
-  loadStudents();
-});
-
-async function loadStudents(){
-  const snapshot = await getDocs(collection(db,'students'));
-  tableBody.innerHTML='';
-  snapshot.forEach(docSnap=>{
-    const s = docSnap.data();
-    const tr=document.createElement('tr');
-    tr.innerHTML=`
-      <td>${s.name}</td>
-      <td>${s.phone}</td>
-      <td>${s.stage||''}</td>
-      <td>${s.group||''}</td>
-      <td>${(s.subjects||[]).map(sub=>`${sub.name} (${sub.day} ${sub.start}-${sub.end})`).join('<br/>')}</td>
-    `;
-    tableBody.appendChild(tr);
-  });
-}
-
-loadStudents();
-</script>
-</body>
-</html>
+const searchInput = document.getElementById('searchInput');
+const refreshBtn = document.getElementById('refreshBtn');
+const totalCount = document.getElementById
